Enable all code analyzers and clean up.

--- a/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
+++ b/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
@@ -16,7 +16,11 @@
         This package contains the core SciTech.Rpc implementation and should normally not be added separately.
         Use one of the SciTech.Rpc implementation packages: SciTech.Rpc.Grpc, SciTech.Rpc.NetGrpc, SciTech.Rpc.Pipelines.
       </Description>
+    </PropertyGroup>
+
+    <PropertyGroup>
       <EnableNETAnalyzers>true</EnableNETAnalyzers>
+      <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     </PropertyGroup>
 
     <ItemGroup>
