--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -26,3 +26,6 @@ dotnet_diagnostic.CA1805.severity = none
 # CA1508: Avoid dead conditional code
 # Currently a lot of false positives (e.g. 'collection as IReadOnlyList<T>' is never 'null'. Remove or refactor the condition(s) to avoid dead code.)
 dotnet_diagnostic.CA1508.severity = none
+
+dotnet_diagnostic.CA1002.severity = none
+
