--- a/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
+++ b/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
@@ -15,9 +15,13 @@ From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy
 
 This package contains the communication layer for the native/.NET implementation of the gRPC library (https://github.com/grpc/grpc).
     </Description>
-    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+  </PropertyGroup>
+  
   <!--<PropertyGroup>
     <CodeAnalysisRuleSet>..\SciTech.Rpc.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>-->
