--- a/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
+++ b/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
@@ -8,7 +8,7 @@
   <Import Project="..\Platform.props" />
 
   <PropertyGroup>
-    <Copyright>Copyright 2019. SciTech Software AB</Copyright>
+    <Copyright>Copyright 2019-2020. SciTech Software AB</Copyright>
     <Description>SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
 From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
 
@@ -19,6 +19,7 @@ This package contains the communication layer for the lightweight implementation
   <PropertyGroup>
     <RootNamespace>SciTech.Rpc</RootNamespace>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
