Improve IRpcContext and include optional 'User' (IPrincipal).

--- a/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
+++ b/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
@@ -92,4 +92,9 @@
     <None Remove="SimpleService.proto" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="security.runsettings">
+    </None>
+  </ItemGroup>
+
 </Project>
