--- a/docs/SciTech.Rpc.DocFx/SciTech.Rpc.DocFx.csproj
+++ b/docs/SciTech.Rpc.DocFx/SciTech.Rpc.DocFx.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="api\index.md" />
     <None Include="articles\intro.md" />
     <None Include="articles\toc.md" />
