--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -6,19 +6,29 @@
   
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>Copyright 2020. SciTech Software AB</Copyright>
+    <Copyright>Copyright 2020-2021. SciTech Software AB</Copyright>
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>1.0.0-beta.10</Version>
-    <Description>Contains utility/helper classes used by the SciTech.Rpc project. This 
-package is currently not intended for other use.</Description>
+    <Version>1.0.0-beta.13</Version>
+    <Description>Contains utility/helper classes used by the SciTech.Rpc project. This package is currently not intended for other use.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>IDT002;1573;1591;$(NoWarn)</NoWarn>
+    
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
+  </ItemGroup>
 
   <Import Project="..\Platform.props" />
   
@@ -58,10 +68,6 @@ package is currently not intended for other use.</Description>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>-->
     <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) != 'netcoreapp3.0'">
     <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
   </ItemGroup>
 </Project>
