--- a/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
+++ b/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
@@ -20,6 +20,7 @@ This package contains a Roslyn analyzer that detects incorrect RPC service defin
   
   <PropertyGroup>
     <NoPackageAnalysis>true</NoPackageAnalysis>
+    <IncludeSymbols>false</IncludeSymbols>
   </PropertyGroup>
 
   <ItemGroup>
