--- a/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
+++ b/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
@@ -8,7 +8,7 @@
   <Import Project="..\Platform.props" />
 
   <PropertyGroup>
-    <Copyright>Copyright 2019. SciTech Software AB</Copyright>
+    <Copyright>Copyright 2019-2021. SciTech Software AB</Copyright>
     <Description>SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
 From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
 
