--- a/examples/Clients/GreeterClient/GreeterClient.csproj
+++ b/examples/Clients/GreeterClient/GreeterClient.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -32,8 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\SciTech.Rpc.Grpc\SciTech.Rpc.Grpc.csproj" />
-    <ProjectReference Include="..\..\..\src\SciTech.Rpc.Lightweight\SciTech.Rpc.Lightweight.csproj" />
+    <ProjectReference Include="..\..\..\src\analyzer\SciTech.Rpc.CodeGen\SciTech.Rpc.CodeGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
