--- a/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
+++ b/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
@@ -32,10 +32,11 @@ This package contains the communication layer for the lightweight implementation
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.1" />
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" />
     <!--<PackageReference Include="Pipelines.Sockets.Unofficial" Version="2.1.1" />-->
     
     <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
-    <PackageReference Include="System.IO.Pipes.AccessControl" Version="4.5.1" />
+    <PackageReference Include="System.IO.Pipes.AccessControl" Version="5.0.0" />
     <!--<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 
     <PackageReference Include="System.Memory" Version="4.5.3" />
