Some documentation updates.

--- a/docs/SciTech.Rpc.DocFx/articles/toc.yml
+++ b/docs/SciTech.Rpc.DocFx/articles/toc.yml
@@ -1,2 +1,6 @@
 - name: Introduction
   href: intro.md
+- name: Define RPC services
+  href: define-services.md
+- name: Exception and error handling
+  href: exceptions.md
