--- a/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
+++ b/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
@@ -1,8 +1,8 @@
 ﻿  <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <!--<TargetFramework>netcoreapp3.0</TargetFramework>-->
-      <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net472;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+      <!--<TargetFrameworks>netstandard2.0;netstandard2.1;net461;net472;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>-->
+      <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
     </PropertyGroup>
 
     <Import Project="..\Package.props" />
