--- a/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
+++ b/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
@@ -31,6 +31,7 @@ This package contains a Roslyn analyzer that detects incorrect RPC service defin
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.4.0" PrivateAssets="all" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
   </ItemGroup>
 
